--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap');
+@import "tailwindcss";
 html{
     background-color: var(--color-bg);
-    color: #f24b18;
+    color: var(--color-text);
     font-family:"BBH Sans Bartle", sans-serif;
 }
 
-
+ 
 :root{
-    --color-bg:#2d3138; 
-    --color-surface: #f5ebe9;
+    --color-bg:#2d3138;  /*Switch this around*/
+    --color-surface: #f5ebe9; /*Switch this around*/
     --color-text: #f24b18; 
     --color-text-muted: #f24b18; 
     --color-primary:#f5ebe9;
@@ -17,13 +18,13 @@ html{
     --color-danger: #dc2626;
 }
 
-[data-theme="dark"]{
+[data-theme="light"]{
     --color-bg:#ffffff; 
     --color-surface: #f7f7f8;
-    --color-text: #111111; 
-    --color-text-muted: #555555; 
+    --color-text: #f24b18; 
+    --color-text-muted: #f24b18; 
     --color-primary:#3b82f6;
-    --color-border: #e4e4e7;
-    --color-success: #16a34a;
+    --color-border: #f7f7f8;;
+    --color-success: #040504;
     --color-danger: #dc2626;
 }
